Time: 90 ms (99.74%) | Memory: 55.4 MB (83.81%) - LeetSync